# sann

./: .gitignore  CMakeLists.txt  Estimator_8hpp_source.html  FileManager_8hpp_source.html  Func_8hpp_source.html  Layer_8hpp_source.html  Logger_8hpp_source.html  Network_8hpp_source.html  Plotter_8hpp_source.html  README.md  Randomizer_8hpp_source.html  Regularizer_8hpp_source.html  Stopwatch_8hpp_source.html  Validator_8hpp_source.html  annotated.html  classes.html  classsann_1_1Estimator-members.html  classsann_1_1Estimator.html  classsann_1_1Estimator__inherit__graph.dot  classsann_1_1Estimator__inherit__graph.md5  classsann_1_1Layer-members.html  classsann_1_1Layer.html  classsann_1_1Network-members.html  classsann_1_1Network.html  classsann_1_1Network__coll__graph.dot  classsann_1_1Network__coll__graph.md5  classsann_1_1NullEst-members.html  classsann_1_1NullEst.html  classsann_1_1NullEst__coll__graph.dot  classsann_1_1NullEst__coll__graph.md5  classsann_1_1NullEst__inherit__graph.dot  classsann_1_1NullEst__inherit__graph.md5  classsann_1_1Regularizer-members.html  classsann_1_1Regularizer.html  classsann_1_1Validator-members.html  classsann_1_1Validator.html  classsann_1_1Validator_1_1TrValidEstimator-members.html  classsann_1_1Validator_1_1TrValidEstimator.html  classsann_1_1Validator_1_1TrValidEstimator__coll__graph.dot  classsann_1_1Validator_1_1TrValidEstimator__coll__graph.md5  (+72 more)
examples/: BaseEstimators.hpp  cup.cpp  monk.cpp  parse.hpp
files/: points.csv  testErrors.csv  trainErrors.csv
files/config/: config.json  cup_validation.json  monk1_validation.json  monk2_validation.json  monk3_validation.json
files/dataSet/: ML-CUP17-TR.csv
files/validation/: README
scripts/: points.py  trainErrors.py  validation.py
search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js  (+4 more)
src/configure_files/: constants.h.in
src/sann/: Estimator.hpp  Layer.cpp  Layer.hpp  Network.cpp  Network.hpp  Regularizer.cpp  Regularizer.hpp  Validator.cpp  Validator.hpp  constants.h  dataStructures.h
src/sann/math/: Func.cpp  Func.hpp  Plotter.cpp  Plotter.hpp  Randomizer.cpp  Randomizer.hpp
(+6 files in other folders)
